# spin-module-badger

./: .gitignore  Cargo.toml  README.md  spin-pluginify.toml
src/: main.rs
