[package]
name = "module-badger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
futures = "0.3.28"
itertools = "0.11.0"
octocrab = "0.25.1"
spin-common = { git = "https://github.com/fermyon/spin", branch = "main" }  # TODO: lock it to 1.4
spin-loader = { git = "https://github.com/fermyon/spin", tag = "v1.3.0" }
tokio = "1.29.1"
url = "2.4.0"
